--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Backend for QR generator APP",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start:prod": "node dist/app.js",
     "start": "ts-node src/app.ts",
     "dev": "ts-node-dev --respawn src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
