--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "NODE_ENV=development ts-node-dev --respawn src/app.ts",
     "start": "NODE_ENV=development ts-node src/app.ts",
     "prod": "NODE_ENV=production ts-node-dev --respawn src/app.ts",
-    "start:prod": "NODE_ENV=production node dist/app.js",
+    "start:prod": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anton Ptashynskyi",
