--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "NODE_ENV=development ts-node-dev --respawn src/app.ts",
-    "start": "NODE_ENV=development ts-node src/app.ts",
-    "prod": "NODE_ENV=production ts-node-dev --respawn src/app.ts",
+    "dev": "ts-node-dev --respawn src/app.ts",
+    "start": "ts-node src/app.ts",
+    "prod": "ts-node-dev --respawn src/app.ts",
     "start:prod": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
