[dev] - add possibility switch between secure and not secure connetcion

--- a/.env.production.local.example
+++ b/.env.production.local.example
@@ -4,6 +4,11 @@ NODE_ENV=production
 # Server Configuration
 PORT=3000
 
+# HTTPS Configuration
+# Set to true when using HTTPS/SSL (required for SameSite=None cookies)
+# Set to false when using HTTP only
+USE_HTTPS=false
+
 # JWT Secrets (generate using: openssl rand -base64 32)
 JWT_SECRET=
 JWT_REFRESH_SECRET=
